.k8s/staging-k8s.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filezilla
  labels:
    app: filezilla
    tags.datadoghq.com/service: filezilla
spec:
  replicas: 1
  selector:
    matchLabels:
      app: filezilla
  template:
    metadata:
      labels:
        app: filezilla
        tags.datadoghq.com/service: filezilla
    spec:
      serviceAccountName: prod-filezilla
      containers:
        - name: filezilla
          image: jlesage/filezilla
          volumeMounts:
            - name: data-volume
              mountPath: /storage
          resources:
            requests:
              memory: '256Mi'
              cpu: '50m'
            limits:
              memory: '512Mi'
              cpu: '100m'
          ports:
            - containerPort: 5900
              protocol: TCP
            - containerPort: 5800
              protocol: TCP
      volumes:
      - name: data-volume
        persistentVolumeClaim:
          claimName: ftp-file-synchronizer-prod

---
apiVersion: v1
kind: Service
metadata:
  name: filezilla
spec:
  type: NodePort
  selector:
    app: filezilla
  ports:
    - name: web
      protocol: TCP
      port: 5800
      targetPort: 5800

---
apiVersion: v1
kind: Service
metadata:
  name: filezilla-vnc
spec:
  type: LoadBalancer
  selector:
    app: filezilla
  ports:
    - name: vnc
      protocol: TCP
      port: 5900
      targetPort: 5900

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: filezilla
  namespace: file-synchronizer
spec:
  ingressClassName: nginx
  rules:
  - host: filezilla.prod-general.colt.infare.net
    http:
      paths:
      - backend:
          service:
            name: filezilla
            port:
              number: 5800
        path: /
        pathType: Prefix
